fix: add box-sizing to newsletter-row to prevent 100% width button overflowing right edge despite padding

--- a/plugins/elementor_addons/widgets/interactive-map/interactive-map.css
+++ b/plugins/elementor_addons/widgets/interactive-map/interactive-map.css
@@ -143,7 +143,7 @@ h4.ivrea-map-title {
   }
 
   .ivrea-map-date {
-    font-size: 10px;
+    font-size: 14px;
     line-height: 14px;
     margin-bottom: 4px;
   }
@@ -153,7 +153,7 @@ h4.ivrea-map-title {
     margin: 0 0 4px 0;
   }
   .ivrea-map-street {
-    font-size: 10px;
+    font-size: 14px;
     line-height: 14px;
   }
 }
