--- a/plugins/elementor_addons/widgets/stats/stats.css
+++ b/plugins/elementor_addons/widgets/stats/stats.css
@@ -123,7 +123,7 @@
 
   .stats-number {
     font-size: 120px!important;
-    margin-top: -42px;
+    margin-top: -2.625rem;
   }
 
   .stats-label {
